--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/costaceta/chatbot-telegram#readme",
   "dependencies": {
+    "express": "^4.17.1",
     "telegraf": "^3.36.0"
   }
 }
