--- a/.gitignore
+++ b/.gitignore
@@ -40,7 +40,6 @@ build/Release
 # Dependency directories
 node_modules/
 jspm_packages/
-package-lock.json
 
 # TypeScript v1 declaration files
 typings/
@@ -75,6 +74,9 @@ typings/
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
+
+# package json
+package-lock.json
 
 # Next.js build output
 .next
