--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "axios": "^0.19.2",
     "express": "^4.17.1",
+    "moment": "^2.24.0",
     "telegraf": "^3.36.0"
   }
 }
